﻿RELEASE HISTORY

08/02/2015 1.00 beta rev 478
    - Fixed bug in Timetable when crossing from one table type to another on midnight (eg. from Weekday to Weekend)
    - Added user-definable thermostat parameter to Eden Oled Menu widget
    - Improved Basic Thermostat app, now compatible with Timetable scheduler and using Virtual Modules
    - Added 0.5 step value input to the thermostat widget dial knob (issue #93)

07/02/2015 1.00 beta rev 476-git7 (sf.net r477)
    - Should fix bug in ZWaveLib Thermostat.SetPointSet (encoding of setpoint value)
    - Added ZWave message queuing for nodes supporting Wake Up command class (battery powered devices - issue #77)
    - Fixed bug in HG.WebApp.Statistics.InitConfiguration that was being called prior that statistics page was open
    - Fixed bug in MIGInterfaceCommand options parsing, that was affecting Statistics/Parameter.StatsHour when a module domain/address filter was passed
    - Fixed IP Camera widget preview not showing

07/02/2015 1.00 beta rev 476-git6
    - Added missing Z-Wave command classes to _nodesetup.js
    - Fixed Thermostat.SetPointSet to accept decimal temperature values istead of integers only
    - Some more ZWaveLib code cleanup
    - Added new data-locale-ids to locale files

06/02/2015 1.00 beta rev 476-git4
    - Trying to fix precision/scale/size in value sent by Thermostat.SetPointSet
    - Fixed temperature reading Fahrenheit/Celsius conversion bug in ZWaveLib when value precision == 2
    - Added thermostats settings query to Z-Wave WakeUp app
    - Trying to fix Thermostat.SetPointGet and WakeUp app

05/02/2015 1.00 beta rev 476
    - Added HTTP post data handling for dynamic web service handlers
    - Fixed bug in Net.SendMail also affecting Security Alarm System app (issue #88)
    - Optimized DLNA/UPnP MIG interface driver
    - Fixed web service call handling in jkUtils OpenWeatherMap and SolarAltitude apps
    - Fixed bug in error reporting for Javascript automation programs