@@ -15,11 +15,16 @@
     <div style="margin-left:10px;">
         <input data-ui-field="media_volume" data-mini="true" type="range" value="60" min="0" max="100">
     </div>
-    <div style="margin-right:20px;margin-top:-5px;padding-bottom:5px" align="right">
-        <span style="display:inline-block;vertical-align:middle">
-            volume
-        </span>&nbsp;
-        <img data-ui-field="media_mute" alt="Mute/Unmute" height="32" src="pages/control/widgets/homegenie/generic/images/media_mute.png" style="display:inline-block;vertical-align:middle;cursor:pointer" />
+    <div class="ui-grid-a" style="margin-top:-5px;padding-bottom:5px">
+        <div class="ui-block-a" style="padding-left:20px;padding-top:6px;">
+            <span data-ui-field="media_position"></span>
+        </div>
+        <div class="ui-block-b" align="right" style="padding-right:20px">
+            <span style="display:inline-block;vertical-align:middle">
+                volume
+            </span>&nbsp;
+            <img data-ui-field="media_mute" alt="Mute/Unmute" height="32" src="pages/control/widgets/homegenie/generic/images/media_mute.png" style="display:inline-block;vertical-align:middle;cursor:pointer" />
+        </div>
     </div>
 
 </div>
