@@ -2,7 +2,7 @@
   <MonoDevelop.Ide.Workspace ActiveConfiguration="Debug" />
   <MonoDevelop.Ide.Workbench ActiveDocument="../HISTORY.TXT">
     <Files>
-      <File FileName="../HISTORY.TXT" Line="1" Column="1" />
+      <File FileName="../HISTORY.TXT" Line="2" Column="1" />
       <File FileName="../README.TXT" Line="1" Column="1" />
     </Files>
   </MonoDevelop.Ide.Workbench>
