@@ -1,44 +1,0 @@
-using System;
-
-namespace MIG.Interfaces.HomeAutomation.Commons
-{
-	public static class Parameters
-	{
-		
-		public static string MODPAR_VIRTUALMETER_WATTS = 
-			"VirtualMeter.Watts";
-		public static string MODPAR_STATUS_LEVEL = 
-			"Status.Level";
-        public static string MODPAR_STATUS_BATTERY =
-            "Status.Battery";
-        public static string MODPAR_METER_WATTS = 
-			"Meter.Watts";
-        public static string MODPAR_SENSOR_GENERIC =
-            "Sensor.Generic";
-        public static string MODPAR_SENSOR_MOTIONDETECT = 
-			"Sensor.MotionDetect";
-		public static string MODPAR_SENSOR_TEMPERATURE = 
-			"Sensor.Temperature";
-		public static string MODPAR_SENSOR_LUMINANCE = 
-			"Sensor.Luminance";
-        public static string MODPAR_SENSOR_HUMIDITY =
-            "Sensor.Humidity";
-        public static string MODPAR_SENSOR_DOORWINDOW =
-            "Sensor.DoorWindow";
-        public static string MODPAR_SENSOR_ALARM_GENERIC =
-            "Sensor.Alarm";
-        public static string MODPAR_SENSOR_ALARM_CARBONMONOXIDE =
-            "Sensor.CarbonMonoxide";
-        public static string MODPAR_SENSOR_ALARM_CARBONDIOXIDE =
-            "Sensor.CarbonDioxide";
-        public static string MODPAR_SENSOR_ALARM_SMOKE =
-            "Sensor.Smoke";
-        public static string MODPAR_SENSOR_ALARM_HEAT =
-            "Sensor.Heat";
-        public static string MODPAR_SENSOR_ALARM_FLOOD =
-            "Sensor.Flood";
-        public static string MODPAR_SENSOR_TAMPER =
-            "Sensor.Tamper";
-    }
-}
-
